# CS_HE_benchmark

./: README.md
helib_tests/: CMakeLists.txt  bgv_test.cpp  ckks_test.cpp
lattigo_tests/: device_check.sh  go.mod  go.sum  hefloat.go  heint.go  main_bfv.go  main_bgv.go  main_ckks.go  serialized_bfv_bgv.go  serialized_ckks.go
openfhe_tests/: CMakeLists.txt  check_device.sh  ciphertext_bfv.txt  ciphertext_bgv.txt  ciphertext_ckks.txt  laptopcheck.sh  main.cpp  main_bfv.cpp  main_bgv.cpp  main_ckks.cpp  rasp_check.sh  single_val.csv  system_metrics.csv
openfhe_tests/basic_ops/: main_bfv.cpp  main_ckks.cpp
openfhe_tests/laptop_serailized/: ciphertext_bfv.txt  ciphertext_bgv.txt  ciphertext_ckks.txt
openfhe_tests/serialize_exps/: serialize_bfv_bgv.cpp  serialize_ckks.cpp
seal_tests/: CMakeLists.txt  laptopcheck.sh  main.cpp  main_bfv.cpp  main_bgv.cpp  main_ckks.cpp  single_val.csv  system_metrics.csv
seal_tests/serialize_exps/: serialize_bfv_bgv.cpp  serialize_ckks.cpp  serialize_ckks_example.cpp
